# clawheartv2

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  LICENSE  RELEASING.md  SECURITY.md  deny.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  readme.md  rustfmt.toml  tailwind.config.cjs  tsconfig.json
.context/: note.md  todo.md
.context/plan/: security-rules-config.md  skills-backup.md  skills-redesign.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_concern.md
.github/workflows/: release-windows-only.yml  release.yml
docs/: api.md  skill-scanner.md  threat-model.md  ui-states.md
docs/architecture/: README.md
docs/migration/: v1-to-v2.md
docs/ppt/: README.md  SCREENSHOTS.md  index.html
docs/proposals/: access-mode-ui-design.md  agent-config-autoapply.md  borrow-from-pipelock.md  w11-mcp-takeover.md  w17-cloud-sync.md
docs/ui/: README.md
public/demos/: hero-A-flow.html  hero-AC-fusion.html  hero-AC2-7pills.html  hero-AC2-checkpoint.html  hero-AC2-line-labels.html  hero-B-radial.html  hero-C-onion-A-left.html  hero-C-onion.html
scripts/: capture-social-preview.mjs  gen-icons.sh  release.sh  setup.sh  test-all.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri-cli/: Cargo.toml
src-tauri-cli/src/: main.rs
src-tauri-cli/src/cli/: agents.rs  init.rs  mod.rs  providers.rs  scan.rs  skills.rs  status.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/schema/: v2.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/agents/: config_probe.rs  drift.rs  mod.rs  process.rs  scanner.rs
src-tauri/src/agents/probes/: claude_code.rs  codex_cli.rs  continue_dev.rs  cursor.rs  gemini_cli.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs  openeva.rs
src-tauri/src/cli/: agents.rs  init.rs  output.rs  providers.rs  scan.rs  skills.rs  status.rs
src-tauri/src/commands/: access_mode.rs  advisory.rs  agent_config.rs  agent_decisions.rs  agents.rs  assignments.rs  auth.rs  budget.rs  danger.rs  import_channels.rs  intercept.rs  killswitch.rs  mod.rs  providers.rs  proxy.rs  scan.rs  security_rules.rs  settings.rs  skills.rs  status.rs  tools.rs  usage.rs
src-tauri/src/proxy/: ca_manager.rs  circuit_breaker.rs  credential_router.rs  cross_request.rs  fetch_server.rs  format_detector.rs  formats.rs  handler.rs  mod.rs  normalizer.rs  pipeline.rs  provider_registry.rs  route.rs  security_check.rs  server.rs  streaming.rs  tls.rs  usage_extractor.rs
src-tauri/src/proxy/mcp/: interceptor.rs  jsonrpc.rs  mod.rs  stdio_bridge.rs
src-tauri/src/proxy/normalizers/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  responses.rs
src-tauri/src/security/: advisory.rs  budget.rs  danger.rs  injection.rs  kill_switch.rs  mcp.rs  mcp_baseline.rs  mcp_chains.rs  mcp_check.rs  mod.rs  normalizer.rs  redact.rs  rule_registry.rs  scanner.rs  sha256.rs  signal.rs  skill_scanner.rs  skills.rs
src-tauri/src/security/checks/: agent_behavior.rs  credentials.rs  file_permission.rs  mcp_config.rs  mod.rs  network.rs  sandbox.rs  skills.rs  windows.rs
src-tauri/src/skills/: backup.rs  discover.rs  manage.rs  manifest.rs  mod.rs
src-tauri/src/storage/: keychain.rs  migrations.rs  mod.rs  models.rs  seed.rs
src-tauri/src/storage/queries/: advisory.rs  agent_config.rs  agents.rs  assignments.rs  budget.rs  danger.rs  intercept.rs  mcp_baseline.rs  mod.rs  providers.rs  scan.rs  security_rules.rs  settings.rs  skills.rs  usage.rs
src-tauri/src/sync/: auth.rs  danger.rs  intercept.rs  mod.rs  skills.rs  usage.rs
src/components/: AppShell.tsx  ErrorBoundary.tsx  Toaster.tsx
src/components/access-mode/: AccessModeTool.tsx  AccessTierAsciiFlow.tsx  AccessTierCard.tsx  AgentTierOverrideList.tsx  ApplyRealRiskDialog.tsx  InstallCaDialog.tsx  SandboxCommandDialog.tsx  SwitchTierDialog.tsx  TierConfigPanel.tsx  data.ts
src/components/agents/: AddChannelDialog.tsx  AgentHistoryDrawer.tsx  AgentTakeoverPanel.tsx  BrandIcon.tsx  ImportFromAgentDialog.tsx  ManageAssignmentsDialog.tsx  SelectChannelDialog.tsx
src/components/grid/: HomeHero.tsx  ToolCard.tsx  ToolsGrid.tsx  tools.config.ts
src/components/overlays/: CommandPalette.tsx  ThemePicker.tsx  TrayPopup.tsx
src/components/providers/: BatchHistoryView.tsx  ImportFromAgentsDialog.tsx  OverwriteWizard.tsx  ProvidersTool.tsx
src/components/tools/: AdvisoryTool.tsx  AgentToggleGroup.tsx  AgentsTool.tsx  AuditTool.tsx  BudgetTool.tsx  LogsTool.tsx  MonitorTool.tsx  MoveToSsotDialog.tsx  Onboarding.tsx  OpenClawTool.tsx  PlaceholderTool.tsx  ScanRunDetailDrawer.tsx  ScanTool.tsx  SecurityRulesPanel.tsx  SettingsTool.tsx  SkillDetailDrawer.tsx  SkillRow.tsx  SkillsBackupTool.tsx  SkillsFilterSidebar.tsx  ToolLayout.tsx  UninstallSkillDialog.tsx  UsageTool.tsx
src/components/ui/: ConfirmDialog.tsx  Sparkline.tsx
src/data/: provider-presets.ts
src/hooks/: useAccessMode.ts  useAdvisories.ts  useAgentConfig.ts  useAgents.ts  useBudget.ts  useChannelAssignments.ts  useChannelImport.ts  useOnboarding.ts  useOverlays.ts  useProviders.ts  useRequestLogs.ts  useScan.ts  useScanHistory.ts  useSecurityRules.ts  useSettings.ts  useSkills.ts  useStatus.ts  useTheme.ts  useUsage.ts
src/lib/: i18n.ts  ipc.ts  queryClient.ts  utils.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/styles/: globals.css
tests/e2e/: README.md
tests/proxy/: README.md
tests/security/: integration_test.rs  mcp_chains.test.json  sample_injections.txt
