[package]
name = "clawheart"
version = "2.0.0-alpha.1"
description = "ClawHeart Desktop v2 — Local AI Security Runtime"
authors = ["ClawHeart Team"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "clawheart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.40", features = ["sync", "rt-multi-thread", "macros", "time", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"
dirs = "5.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Optional — only pulled when corresponding feature flag is on. Lets `cargo run`
# work on a clean checkout while keeping the upgrade path explicit.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
keyring = { version = "3.0", optional = true }
sysinfo = { version = "0.32", optional = true }
notify = { version = "7.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"], optional = true }
ed25519-dalek = { version = "2.1", optional = true }
hudsucker = { version = "0.22", optional = true }
rustls = { version = "0.23", optional = true }
rcgen = { version = "0.13", optional = true }
async-trait = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }
bytes = { version = "1.7", optional = true }
futures = { version = "0.3", optional = true }
http-body-util = { version = "0.1", optional = true }
tauri-plugin-updater = { version = "2.0", optional = true }
tauri-plugin-notification = { version = "2.0", optional = true }
tauri-plugin-os = "2.0"

[features]
# alpha 默认开三件套：本地存储 + 反向代理 + MITM 代理
# 用户 `npm run tauri:dev` / 打包应用直接拥有完整真转发能力
default = ["storage", "fetch_server", "proxy_real"]
storage      = ["dep:rusqlite", "dep:keyring"]
proxy_real   = ["dep:hudsucker", "dep:rustls", "dep:rcgen", "dep:async-trait", "dep:http-body-util", "dep:bytes"]
fetch_server = ["dep:axum", "dep:tower-http", "dep:reqwest", "dep:bytes", "dep:futures"]
agents_real  = ["dep:sysinfo", "dep:notify"]
sync_real    = ["dep:reqwest"]
feed_verify  = ["dep:ed25519-dalek"]
updater      = ["dep:tauri-plugin-updater"]
notifications = ["dep:tauri-plugin-notification"]
full         = ["storage", "proxy_real", "fetch_server", "agents_real", "sync_real", "feed_verify", "updater", "notifications"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true

[profile.dev]
incremental = true
